Enable manual workflow triggers

--- a/.github/workflows/update-blog-data.yml
+++ b/.github/workflows/update-blog-data.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - 'pages/blog/posts/*.html'
       - '!pages/blog/posts/_*.html'  # Ignore templates
+  workflow_dispatch:
 
 jobs:
   update-blog-data:
