--- a/.github/workflows/update-blog-data.yml
+++ b/.github/workflows/update-blog-data.yml
@@ -1,12 +1,14 @@
 name: Update Blog Data
+
 permissions:
   contents: write
+
 on:
   push:
     branches: [ main ]
     paths:
       - 'pages/blog/posts/*.html'
-      - '!pages/blog/posts/_*.html'  # Ignore templates
+      - '!pages/blog/posts/_*.html'
   workflow_dispatch:
 
 jobs:
@@ -18,6 +20,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0  # Fetch full history
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -28,10 +31,31 @@ jobs:
         run: |
           node .github/scripts/update-blog-data.js
 
-      - name: Commit changes
+      - name: Commit and push changes
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add blog-data.json
-          git diff --quiet && git diff --staged --quiet || git commit -m "Auto-update blog-data.json"
-          git push
+
+          # Only commit if there are changes
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+            exit 0
+          fi
+
+          git commit -m "🤖 Auto-update blog-data.json"
+
+          # Try to push with retry logic
+          max_attempts=3
+          attempt=1
+          while [ $attempt -le $max_attempts ]; do
+            echo "Push attempt $attempt of $max_attempts"
+            git pull --rebase origin main && git push && break
+            attempt=$((attempt + 1))
+            sleep 2
+          done
+
+          if [ $attempt -gt $max_attempts ]; then
+            echo "Failed to push after $max_attempts attempts"
+            exit 1
+          fi
